########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

CHANGED:

* Updated KaTeX to version 0.8.2.

* Updated python-markdown to version 2.6.9.

DEPRECATED:

REMOVED:

FIXED:

* Fixed an issue that caused an error message not to be shown when cs_form was
  not defined.

SECURITY:

DOCUMENTATION:


##################
# Version 10.3.0 #
##################

CHANGED:

* Moved all logs to one central location to make backups easier.


##################
# Version 10.2.2 #
##################

REMOVED:

* Removed several calls to the deprecated cs_print from the default "main"
  page.

* Removed Acknowledgments section from the default "main" page.

FIXED:

* Removed an extraneous print statement from the default handler.

* Remove HTML formatting from course name in source.zip downloads.


##################
# Version 10.2.1 #
##################

CHANGED:

* Prevented the creation of extra directories when reading nonexistent logs.

REMOVED:

* Removed the defunct checker_reporter.js script.

FIXED:

* Fixed a number of issues with sessions.

* Fixed an issue with serializing Python sets for logging.

##################
# Version 10.2.0 #
##################

ADDED:

* Added more options to modify the styling of the "login required" box.

CHANGED:

* Submission IDs are no longer visible by default, though they can be made
  visible with cs_show_submission_id.

* Logs once again use SQLite instead of RethinkDB.

REMOVED:

* Removed RethinkDB completely.

FIXED:

* Updated the location of the default remote sandbox.


##################
# Version 10.1.0 #
##################

ADDED:

* cs_user_info and cs_username are now always defined, even on pages that don't
  require authentication

CHANGED:

* The built-in print function can now be used instead of cs_print to inject
  page content from within <python> tags.

DEPRECATED:
