@@ -6,11 +6,17 @@ Work toward next release.  Currently under development.
 
 ADDED:
 
+* Added a built-in help queue.
+
 CHANGED:
 
 * Updated KaTeX to version 0.8.2.
 
 * Updated python-markdown to version 2.6.9.
+
+* The magic variable controlling the checker's location is now
+  cs_checker_location instead of cs_websocket_location (which is now
+  ambiguous).
 
 DEPRECATED:
 
